# AppInstaller

./: .gitignore  README.md  io.github.rfrench3.appbox.desktop  io.github.rfrench3.appbox.metainfo.xml  io.github.rfrench3.appbox.yml  io.github.rfrench3.appinstaller.desktop  io.github.rfrench3.appinstaller.yml  io.github.rfrench3.pyside6-flatpak-template.desktop  pyproject.toml
src/: appbox.py  appman.py  core.py  install_distrobox.sh  installer.ui  main.py  main_window.ui
src/gui-qt/: main.py
src/gui_qt/: gui_qt.py  main_window.ui
