[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appbox"
version = "0.1.0"
description = "A Python app with both CLI and Qt GUI"
authors = [
    { name="Your Name", email="your@email.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PySide6",  
]

[project.scripts]
appbox = "src.appbox:main"  # Adjust if your entry point function is named differently

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["core", "gui_qt"]
include-package-data = true

[tool.setuptools.package-data]
"gui_qt" = ["*.ui"]